Mobile first в темной версии

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,9 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bd-color: #000028;
+  --text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --title-decor-color: #ff0070;
+  --title-decor-text: #000028;
+  --main-font: "IBM Plex Mono", monospace;
+}
