--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,185 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--bc-color);
+  background-image: url("../images/cover-image-dark.png");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  color: var(--text-color);
+  font-family: var(--main-font);
+}
+
+.header,
+.footer {
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  gap: 55px;
+}
+
+.header__theme-menu {
+  grid-row: 1;
+  justify-self: end;
+  /*align-self: center;*/
+  position: relative;
+  top: 70px;
+}
+
+.header__title,
+.footer__title {
+  grid-row: 2;
+  color: var(--title-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: bold;
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__text {
+  font-size: 18px;
+  grid-row: 3;
+  max-width: 355px;
+  max-height: 117px;
+}
+
+.title-decor{
+  background-color: var(--title-decor-color);
+  color: var(--title-decor-text);
+  font-weight: bold;
+  padding: 0;
+  line-height: 23.4px;
+}
+
+.header__rec {
+  position: absolute;
+  font-size: 18px;
+  top: 10px;
+  right: 19px;
+  color: var(--accent-color);
+  line-height: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.header__rec::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  margin-left: 10px;
+  box-shadow: 0 0 4px 2px var(--accent-color);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 11.5px;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
+  cursor: pointer;
+  padding: 1.5px 13px;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid rgba(255, 0, 112, 0.4);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+  pointer-events: none;
+}
+
+.content__section {
+  padding: 40px 10px;
+  display: grid;
+  gap: 20px;
+}
+
+.content__title {
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: 700px;
+  line-height: 23.4px;
+}
+
+.card {
+  display: grid;
+  gap: 10px;
+}
+
+.card__link {
+  text-decoration: none;
+  color: inherit;
+  text-shadow: 1px 1px 0 var(--accent-color)
+}
+
+.card__link:hover{
+  text-decoration: underline;
+  text-decoration-color: var(--text-color);
+}
+ 
+.card__link:focus-visible{
+  outline: none;
+  border: 1px solid var(--text-color);
+}
+
+.card__subtitle{
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.gallery{
+  padding: 10px;
+  display: grid;
+  gap: 10px;
+}
+
+.gallery__image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
