--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
   max-height: 117px;
 }
 
-.title-decor{
+.title-decor {
   background-color: var(--title-decor-color);
   color: var(--title-decor-text);
   font-weight: bold;
@@ -153,33 +153,146 @@
 .card__link {
   text-decoration: none;
   color: inherit;
-  text-shadow: 1px 1px 0 var(--accent-color)
+  text-shadow: 1px 1px 0 var(--accent-color);
 }
 
-.card__link:hover{
+.card__link:hover {
   text-decoration: underline;
   text-decoration-color: var(--text-color);
 }
- 
-.card__link:focus-visible{
+
+.card__link:focus-visible {
   outline: none;
   border: 1px solid var(--text-color);
 }
 
-.card__subtitle{
+.card__subtitle {
   font-weight: 400;
   font-size: 18px;
   line-height: 23.4px;
 }
 
-.gallery{
+.gallery {
   padding: 10px;
   display: grid;
   gap: 10px;
 }
 
-.gallery__image{
+.gallery__image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .header__title,
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header {
+    padding: 20px;
+  }
+
+  .header__text {
+    max-width: 364px;
+    justify-self: end;
+  }
+
+  .header__theme-menu {
+    top: 182px;
+  }
+
+  .content__section:nth-child(1),
+  .content__section:nth-child(3) {
+    grid-template-columns: 236px 1fr;
+  }
+
+  .content__section:nth-child(1) .content__title,
+  .content__section:nth-child(3) .content__title {
+    grid-column: 1;
+  }
+
+  .content__section:nth-child(1) .card,
+  .content__section:nth-child(3) .card {
+    grid-column: 2;
+  }
+
+  .content__section:nth-child(2) .content__title {
+    max-width: 236px;
+  }
+
+  .content__section {
+    padding: 60px 20px;
+  }
+
+  .gallery {
+    padding: 20px;
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .gallery__title {
+    grid-column: 1 / -1;
+  }
+
+  .gallery__image:nth-child(2) {
+    grid-column: span 2;
+  }
+
+  .gallery__image:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__image:nth-child(4) {
+    grid-row: span 2;
+  }
+
+  .gallery__image:nth-child(6) {
+    grid-column: span 2;
+  }
+
+  .footer__title {
+    justify-self: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__theme-menu {
+    top: 0;
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__title {
+    margin-inline-end: 273px 132px;
+  }
+
+  .header__text {
+    max-width: 491px;
+    max-height: 71px;
+  }
+
+  .content__section:nth-child(2){
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+  }
+
+  .content__section:nth-child(2) .content__title {
+    grid-column: 1 / -1;
+  }
+
+  .content__section:nth-child(1) .card,
+.content__section:nth-child(3) .card {
+  max-width: 649px;
+  justify-self: end;
+}
+
+.content__title{
+  min-width: 315px;
+}
 }
