--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,79 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --title-decor-color: #ff0070;
+  --title-decor-text: #000028;
+}
+
+.page.theme-dark {
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme-dark .header__rec {
+  display: block;
+}
+
+.page.theme-dark .decorated-zone::before,
+.page.theme-dark .decorated-zone::after {
+  border-color: var(--accent-color);
+}
+
+.page.theme-dark .header__theme-menu-button {
+  color: var(--accent-color);
+}
+
+.page.theme-dark .header__theme-menu-button:hover {
+  border-color: rgba(255, 0, 112, 0.4);
+}
+
+.page.theme-dark .header__theme-menu-button_active {
+  border-color: var(--accent-color);
+}
+
+.page.theme-dark .header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--accent-color);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000028;
+    --text-color: #f1b2ce;
+    --accent-color: #ff0070;
+    --title-color: #db00ff;
+    --title-decor-color: #ff0070;
+    --title-decor-text: #000028;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+
+  .header__rec {
+    display: none;
+  }
+
+  .decorated-zone::before,
+  .decorated-zone::after {
+    border-color: var(--text-color);
+  }
+
+  .header__theme-menu-button {
+    color: var(--text-color);
+  }
+
+  .header__theme-menu-button:hover {
+    border-color: rgba(255, 0, 112, 0.4);
+  }
+
+  .header__theme-menu-button_active {
+    border-color: var(--text-color);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom-color: var(--text-color);
+  }
 }
