--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,76 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
+  --title-decor-color: #ff8dcb;
+  --title-decor-text: #353430;
+}
+
+.page.theme-light .header__rec {
+  background-image: url(../images/cover-image-light.png);
+  display: none;
+}
+
+.page.theme-light .decorated-zone::before,
+.page.theme-light .decorated-zone::after {
+  border-color: var(--text-color);
+}
+
+.page.theme-light .header__theme-menu-button {
+  color: var(--text-color);
+}
+
+.page.theme-light .header__theme-menu-button:hover {
+  border-color: rgba(50, 49, 45, 0.4);
+}
+
+.page.theme-light .header__theme-menu-button_active {
+  border-color: var(--text-color);
+}
+
+.page.theme-light .header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
+    --title-decor-color: #ff8dcb;
+    --title-decor-text: #353430;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .header__rec {
+    display: none;
+  }
+
+  .decorated-zone::before,
+  .decorated-zone::after {
+    border-color: var(--text-color);
+  }
+
+    .header__theme-menu-button {
+    color: var(--text-color);
+  }
+
+  .header__theme-menu-button:hover {
+    border-color: rgba(50, 49, 45, 0.4);
+  }
+
+  .header__theme-menu-button_active {
+    border-color: var(--text-color);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom-color: var(--text-color);
+  }
 }
