--- a/styles/light.css
+++ b/styles/light.css
@@ -11,31 +11,39 @@
   --title-color: #ffc2e6;
   --title-decor-color: #ff8dcb;
   --title-decor-text: #353430;
+  --bg-image: url(../images/cover-image-light.png);
+  --section-heading-color: #353430;
 }
 
-.page.theme-light .header__rec {
-  background-image: url(../images/cover-image-light.png);
+.page {
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: contain;
+  background-attachment: fixed;
+}
+
+theme-light .header__rec {
   display: none;
 }
 
-.page.theme-light .decorated-zone::before,
-.page.theme-light .decorated-zone::after {
+theme-light .decorated-zone::before,
+theme-light .decorated-zone::after {
   border-color: var(--text-color);
 }
 
-.page.theme-light .header__theme-menu-button {
+theme-light .header__theme-menu-button {
   color: var(--text-color);
 }
 
-.page.theme-light .header__theme-menu-button:hover {
+theme-light .header__theme-menu-button:hover {
   border-color: rgba(50, 49, 45, 0.4);
 }
 
-.page.theme-light .header__theme-menu-button_active {
+theme-light .header__theme-menu-button_active {
   border-color: var(--text-color);
 }
 
-.page.theme-light .header__theme-menu-button:focus-visible {
+theme-light .header__theme-menu-button:focus-visible {
   border-bottom-color: var(--text-color);
 }
 
@@ -47,13 +55,18 @@
     --title-color: #ffc2e6;
     --title-decor-color: #ff8dcb;
     --title-decor-text: #353430;
+    --section-heading-color: #353430;
+    --bg-image: url(../images/cover-image-light.png);
   }
 
   .page {
-    background-image: url(../images/cover-image-light.png);
+    background-image: var(--bg-image);
+    background-position: center;
+    background-size: contain;
+    background-attachment: fixed;
   }
 
-  .header__rec {
+  .page .header__rec {
     display: none;
   }
 
@@ -62,7 +75,7 @@
     border-color: var(--text-color);
   }
 
-    .header__theme-menu-button {
+  .header__theme-menu-button {
     color: var(--text-color);
   }
 
